--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -43,9 +43,7 @@ Imports:
   digest (>= 0.6.25),
   dplyr (>= 1.0.0),
   fs (>= 1.4.2),
-  furrr (>= 0.3.0),
-  future (>= 1.0.0),
-  future.callr (>= 0.2.0),
+  parallel,
   rlang (>= 0.4.7),
   targets (>= 1.1.0),
   tibble (>= 3.0.1),
