To align with https://github.com/ropensci/targets/issues/1244 and https://github.com/ropensci/targets/pull/1262, switch the hashing functions from digest::digest() to secretbase::siphash13().

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Description: Function-oriented Make-like declarative pipelines for
   reproducible pipelines concisely and compactly.
   The methods in this package were influenced by the 'drake' R package
   by Will Landau (2018) <doi:10.21105/joss.00550>.
-Version: 0.8.0.9000
+Version: 0.8.0.9001
 License: MIT + file LICENSE
 URL: https://docs.ropensci.org/tarchetypes/, https://github.com/ropensci/tarchetypes
 BugReports: https://github.com/ropensci/tarchetypes/issues
@@ -40,11 +40,11 @@ Authors@R: c(
 Depends:
   R (>= 3.5.0)
 Imports:
-  digest (>= 0.6.25),
   dplyr (>= 1.0.0),
   fs (>= 1.4.2),
   parallel,
   rlang (>= 0.4.7),
+  secretbase (>= 0.4.0),
   targets (>= 1.6.0),
   tibble (>= 3.0.1),
   tidyselect (>= 1.1.0),
