--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,8 +66,11 @@ export(tar_group_size)
 export(tar_group_size_index)
 export(tar_group_size_run)
 export(tar_hook_before)
+export(tar_hook_before_raw)
 export(tar_hook_inner)
+export(tar_hook_inner_raw)
 export(tar_hook_outer)
+export(tar_hook_outer_raw)
 export(tar_keras)
 export(tar_knit)
 export(tar_knit_raw)
@@ -140,6 +143,7 @@ importFrom(parallel,makePSOCKcluster)
 importFrom(parallel,parLapply)
 importFrom(parallel,stopCluster)
 importFrom(rlang,as_function)
+importFrom(rlang,as_quosure)
 importFrom(rlang,call2)
 importFrom(rlang,check_installed)
 importFrom(rlang,enquo)
