Use rlang::is_call() in tar_assign()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -150,6 +150,7 @@ importFrom(rlang,check_installed)
 importFrom(rlang,enquo)
 importFrom(rlang,expr)
 importFrom(rlang,inform)
+importFrom(rlang,is_call)
 importFrom(rlang,is_missing)
 importFrom(rlang,quo_squash)
 importFrom(secretbase,siphash13)
