--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,6 +83,7 @@ export(tar_map2)
 export(tar_map2_count)
 export(tar_map2_count_raw)
 export(tar_map2_group)
+export(tar_map2_raw)
 export(tar_map2_run)
 export(tar_map2_run_rep)
 export(tar_map2_size)
