supersede superfluous and conflicting target factories for storage formats

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(one_of)
 export(starts_with)
 export(tar_age)
 export(tar_append_static_values)
+export(tar_arrow_feather)
 export(tar_assign)
 export(tar_aws_file)
 export(tar_aws_fst)
