--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -25,7 +25,7 @@ reference:
   - 'tar_knitr_deps'
   - 'tar_knitr_deps_expr'
   - 'tar_quarto_files'
-- title: Formats
+- title: Target factories for storage formats
   contents:
   - 'tar_formats'
 - title: Simple files
