--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,7 @@ export(tar_force)
 export(tar_force_change)
 export(tar_format_aws_feather)
 export(tar_format_feather)
+export(tar_format_nanoparquet)
 export(tar_fst)
 export(tar_fst_dt)
 export(tar_fst_tbl)
@@ -91,6 +92,9 @@ export(tar_map2_size)
 export(tar_map2_size_raw)
 export(tar_map_rep)
 export(tar_map_rep_raw)
+export(tar_nanoparquet_convert)
+export(tar_nanoparquet_read)
+export(tar_nanoparquet_write)
 export(tar_parquet)
 export(tar_plan)
 export(tar_qs)
@@ -201,6 +205,7 @@ importFrom(targets,tar_deparse_safe)
 importFrom(targets,tar_dir)
 importFrom(targets,tar_envir)
 importFrom(targets,tar_exist_meta)
+importFrom(targets,tar_format)
 importFrom(targets,tar_group)
 importFrom(targets,tar_load)
 importFrom(targets,tar_meta)
