--- a/NAMESPACE
+++ b/NAMESPACE
@@ -92,6 +92,7 @@ export(tar_map2_size)
 export(tar_map2_size_raw)
 export(tar_map_rep)
 export(tar_map_rep_raw)
+export(tar_nanoparquet)
 export(tar_nanoparquet_convert)
 export(tar_nanoparquet_read)
 export(tar_nanoparquet_write)
