--- a/NAMESPACE
+++ b/NAMESPACE
@@ -141,6 +141,7 @@ importFrom(dplyr,bind_rows)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
 importFrom(fs,dir_create)
+importFrom(fs,file_move)
 importFrom(fs,is_dir)
 importFrom(fs,path_ext)
 importFrom(fs,path_ext_remove)
