--- a/NAMESPACE
+++ b/NAMESPACE
@@ -148,6 +148,7 @@ importFrom(fs,path_ext_remove)
 importFrom(fs,path_ext_set)
 importFrom(fs,path_rel)
 importFrom(parallel,clusterCall)
+importFrom(parallel,clusterExport)
 importFrom(parallel,clusterMap)
 importFrom(parallel,makePSOCKcluster)
 importFrom(parallel,parLapply)
