document tar_translate()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -134,6 +134,7 @@ export(tar_skip)
 export(tar_sub)
 export(tar_sub_raw)
 export(tar_torch)
+export(tar_translate)
 export(tar_url)
 export(walk_ast)
 export(walk_call_knitr)
