--- a/NAMESPACE
+++ b/NAMESPACE
@@ -133,6 +133,7 @@ export(tar_select_targets)
 export(tar_skip)
 export(tar_sub)
 export(tar_sub_raw)
+export(tar_tangle)
 export(tar_torch)
 export(tar_translate)
 export(tar_url)
