--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -61,6 +61,7 @@ Suggests:
   curl (>= 4.3),
   knitr (>= 1.28),
   nanoparquet,
+  parsermd,
   quarto (>= 1.4),
   rmarkdown (>= 2.1),
   testthat (>= 3.0.0),
